Add DistributedQueue class based on DistributedArray. Change documentation and many parts of code in DistributedArray.cs
Signed-off-by: 80LevelElf <salahutd@gmail.com>

--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DistributedArray.cs" />
     <Compile Include="DistributedArrayEnumerator.cs" />
+    <Compile Include="DistributedQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
