--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -41,10 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DistributedArray.cs" />
-    <Compile Include="DistributedArrayEnumerator.cs" />
-    <Compile Include="DistributedQueue.cs" />
+    <Compile Include="DistributedArray\DistributedArray.cs" />
+    <Compile Include="DistributedArray\DistributedArrayEnumerator.cs" />
+    <Compile Include="DistributedQueue\DistributedQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Support\BlockRange.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
