--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DistributedArray\DistributedArrayEnumerator.cs" />
     <Compile Include="DistributedArray\Managers\ValidationManager.cs" />
     <Compile Include="DistributedArray\SupportClasses\Blocks.cs" />
+    <Compile Include="DistributedArray\SupportClasses\MultyblockRange.cs" />
     <Compile Include="DistributedQueue\DistributedQueue.cs" />
     <Compile Include="DistributedArray\Managers\DefaultValuesManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
