--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -44,7 +44,7 @@
     <Compile Include="DistributedArray\DistributedArray.cs" />
     <Compile Include="DistributedArray\DistributedArrayEnumerator.cs" />
     <Compile Include="DistributedArray\Managers\ValidationManager.cs" />
-    <Compile Include="DistributedArray\SupportClasses\Blocks.cs" />
+    <Compile Include="DistributedArray\SupportClasses\BlockCollection.cs" />
     <Compile Include="DistributedArray\SupportClasses\MultyblockRange.cs" />
     <Compile Include="DistributedArray\SupportClasses\BlockInformation.cs" />
     <Compile Include="DistributedQueue\DistributedQueue.cs" />
