--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DistributedArrayTest.cs" />
+    <Compile Include="DistributedArrayTests\BlockCollectionTest.cs" />
+    <Compile Include="DistributedArrayTests\DistributedArrayTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Managers\ExceptionManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
