--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -43,16 +43,22 @@
   <ItemGroup>
     <Compile Include="DistributedArray\DistributedArray.cs" />
     <Compile Include="DistributedArray\DistributedArrayEnumerator.cs" />
+    <Compile Include="DistributedArray\Managers\StructureManager\StructureInfo.cs" />
+    <Compile Include="DistributedArray\Managers\StructureManager\StructureManager.cs" />
     <Compile Include="DistributedArray\Managers\ValidationManager.cs" />
     <Compile Include="DistributedArray\SupportClasses\BlockCollection\BlockCollection.cs" />
     <Compile Include="DistributedArray\SupportClasses\BlockCollection\BlockCollectionEnumerator.cs" />
-    <Compile Include="DistributedArray\SupportClasses\MultyblockRange.cs" />
-    <Compile Include="DistributedArray\SupportClasses\BlockInformation.cs" />
+    <Compile Include="DistributedArray\Managers\StructureManager\MultyblockRange.cs" />
+    <Compile Include="DistributedArray\Managers\StructureManager\BlockInformation.cs" />
     <Compile Include="DistributedQueue\DistributedQueue.cs" />
     <Compile Include="DistributedArray\Managers\DefaultValuesManager.cs" />
     <Compile Include="DistributedStack\DistributedStack.cs" />
+    <Compile Include="LevelSparseArray\LevelSparseArray.cs" />
+    <Compile Include="LevelSparseArray\Managers\IndexManager.cs" />
+    <Compile Include="LevelSparseArray\SupportClasses\Level.cs" />
+    <Compile Include="LevelSparseArray\SupportClasses\Index.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DistributedArray\SupportClasses\BlockRange.cs" />
+    <Compile Include="DistributedArray\Managers\StructureManager\BlockRange.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
