- Way of storage block information was backed (now it situate in separate array, not as part of Block object) - Change of BinaryBlockInfo in StructureManager. Now we try to predict block stores the element with specified index.
Signed-off-by: 80LevelElf <salahutd@gmail.com>

--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DistributedArray\DistributedArrayEnumerator.cs" />
     <Compile Include="DistributedArray\Interfaces\IArrayList.cs" />
     <Compile Include="DistributedArray\InternalBlockCollections\InternalBlockList.cs" />
+    <Compile Include="DistributedArray\Managers\StructureManager\BlockInfo.cs" />
     <Compile Include="DistributedArray\Managers\StructureManager\BlockInformation.cs" />
     <Compile Include="DistributedArray\Managers\StructureManager\StructureManager.cs" />
     <Compile Include="DistributedArray\Managers\ValidationManager.cs" />
