- Add base of LevelSparseArray - Bug with wrong range in BlockStructure.BinaryBlockInfo was fixed - New unit test(BlockStructureTests) was added. - Some documentation (BlockStructure.ReverseMultyblockRange was fixed)
Signed-off-by: 80LevelElf <salahutd@gmail.com>

--- a/BigDataCollections/BigDataCollections.csproj
+++ b/BigDataCollections/BigDataCollections.csproj
@@ -58,8 +58,9 @@
     <Compile Include="DistributedStack\DistributedStack.cs" />
     <Compile Include="LevelSparseArray\LevelSparseArray.cs" />
     <Compile Include="LevelSparseArray\Managers\IndexManager.cs" />
-    <Compile Include="LevelSparseArray\SupportClasses\Level.cs" />
     <Compile Include="LevelSparseArray\SupportClasses\Index.cs" />
+    <Compile Include="LevelSparseArray\SupportClasses\Level\DataLevel.cs" />
+    <Compile Include="LevelSparseArray\SupportClasses\Level\Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DistributedArray\SupportClasses\BlockStructure\BlockRange.cs" />
   </ItemGroup>
