- Changed gitignore(now it completely work) - Changed Bigio output folder
Signed-off-by: 80LevelElf <salahutd@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,18 @@
 *.DotSettings
 *.user
 
-packages/
-bin/
-obj/
+UnitTests/bin/
+UnitTests/obj/
+UnitTests/packages/
 
-!Bigio/bin/Release/Bigio.dll
+Bigio/bin/
+Bigio/obj/
+Bigio/packages/
+
+PerformanceTests/bin/
+PerformanceTests/obj/
+PerformanceTests/packages/
+
+/packages/
+
+!/bin/Bigio.dll
