- Several code-style fixes - New implementation of Exists() - Add test template
Signed-off-by: 80LevelElf <salahutd@gmail.com>

--- a/PerformanceTests/PerformanceTests.csproj
+++ b/PerformanceTests/PerformanceTests.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BigArray\AddAndAddRangeTest.cs" />
+    <Compile Include="BigArray\TemplateTest_JustToCheckSmth.cs" />
     <Compile Include="Configs\StandardConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
