--- a/PerformanceTests/PerformanceTests.csproj
+++ b/PerformanceTests/PerformanceTests.csproj
@@ -33,36 +33,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BenchmarkDotNet, Version=0.9.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\BenchmarkDotNet.0.9.4\lib\net40\BenchmarkDotNet.dll</HintPath>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PowerCollections, Version=1.0.2141.24679, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XAct.Wintellect.PowerCollections.0.0.1\lib\net20\PowerCollections.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ClassLibrary2, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Elders.PowerCollections.1.0.0\lib\net35\ClassLibrary2.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Build" />
-    <Reference Include="Microsoft.Build.Framework" />
-    <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Management" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BigioTests\AddAndAddRangeTest.cs" />
-    <Compile Include="BigioTests\IndexOfAndSearchTest.cs" />
-    <Compile Include="BigioTests\InsertAndInsertRangeTest.cs" />
-    <Compile Include="BigioTests\LoopsTest.cs" />
-    <Compile Include="TemplateTests\AbstractTest.cs" />
-    <Compile Include="TemplateTests\AddAndAddRangeTest.cs" />
-    <Compile Include="TemplateTests\IndexOfAndSearchTest.cs" />
-    <Compile Include="TemplateTests\InsertAndInsertRangeTest.cs" />
-    <Compile Include="TemplateTests\LoopsTest.cs" />
-    <Compile Include="TemplateTestJustToCheckSmth.cs" />
-    <Compile Include="Configs\StandardConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestArguments.cs" />
+    <Compile Include="TestEngine.cs" />
+    <Compile Include="TestManager.cs" />
+    <Compile Include="TestResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
