--- a/PerformanceTests/packages.config
+++ b/PerformanceTests/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BenchmarkDotNet" version="0.9.4" targetFramework="net40" />
-  <package id="Elders.PowerCollections" version="1.0.0" targetFramework="net40" />
+  <package id="XAct.Wintellect.PowerCollections" version="0.0.1" targetFramework="net40" />
 </packages>
