--- a/PerformanceTests/PerformanceTests.csproj
+++ b/PerformanceTests/PerformanceTests.csproj
@@ -44,13 +44,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MeasureEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestArguments.cs" />
-    <Compile Include="CallFlag.cs" />
-    <Compile Include="TestEngine.cs" />
-    <Compile Include="TestManager.cs" />
-    <Compile Include="TestResult.cs" />
+    <Compile Include="СomparativeTests\TestArguments.cs" />
+    <Compile Include="СomparativeTests\CallFlag.cs" />
+    <Compile Include="СomparativeTests\TestEngine.cs" />
+    <Compile Include="СomparativeTests\TestManager.cs" />
+    <Compile Include="СomparativeTests\TestResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -61,6 +62,9 @@
       <Project>{f7eac7df-7666-48a5-bd18-0c36f2ec2c36}</Project>
       <Name>Bigio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="EngineMeasuringTest\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
