- Foreach became a twice faster - Add enumerator unit test - Little refactoring - Add template for BigArayAsyncEnumerator
Signed-off-by: 80LevelElf <salahutd@gmail.com>

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bigio Tests\BigArray Tests\BigArrayEnumeratorTest.cs" />
     <Compile Include="Bigio Tests\BigArray Tests\Support Classes Tests\BlockCollectionTest.cs" />
     <Compile Include="Bigio Tests\BigArray Tests\Support Classes Tests\BlockStructureTests.cs" />
     <Compile Include="Bigio Tests\BigArray Tests\BigArrayTest.cs" />
