--- a/Bigio/Bigio.csproj
+++ b/Bigio/Bigio.csproj
@@ -38,6 +38,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BigArray\BigArayAsyncEnumerator.cs" />
     <Compile Include="BigArray\BigArray.cs" />
     <Compile Include="BigArray\BigArrayEnumerator.cs" />
     <Compile Include="BigArray\Interfaces\IBigList.cs" />
