--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bigio Tests\BigArray Tests\BigArrayEnumeratorTest.cs" />
+    <Compile Include="Bigio Tests\BigArray Tests\MultythreadTest.cs" />
     <Compile Include="Bigio Tests\BigArray Tests\Support Classes Tests\BlockCollectionTest.cs" />
     <Compile Include="Bigio Tests\BigArray Tests\Support Classes Tests\ArrayMapTests.cs" />
     <Compile Include="Bigio Tests\BigArray Tests\BigArrayTest.cs" />
