Initial commit of BigDictionary

--- a/Bigio/Bigio.csproj
+++ b/Bigio/Bigio.csproj
@@ -54,6 +54,23 @@
     <Compile Include="BigArray\Support Classes\BlockCollection\BlockCollectionEnumerator.cs" />
     <Compile Include="BigArray\Support Classes\ArrayMap\CachedCountInfo.cs" />
     <Compile Include="BigArray\Support Classes\ArrayMap\MultyblockRange.cs" />
+    <Compile Include="BigDictionary\Balancer\AbstractPrecalculatedBalancer.cs" />
+    <Compile Include="BigDictionary\Balancer\FastReducedBalancer.cs" />
+    <Compile Include="BigDictionary\Balancer\IBalancer.cs" />
+    <Compile Include="BigDictionary\BigDictionary.cs" />
+    <Compile Include="BigDictionary\Cell\NodeCell.cs" />
+    <Compile Include="BigDictionary\Cell\ValueCell.cs" />
+    <Compile Include="BigDictionary\Cell\ICell.cs" />
+    <Compile Include="BigDictionary\Cell\CollisionItem.cs" />
+    <Compile Include="BigDictionary\DictionaryMap\AbstractDictionaryMap.cs" />
+    <Compile Include="BigDictionary\DictionaryMap\FindNodeResult.cs" />
+    <Compile Include="BigDictionary\DictionaryMap\IDictionaryMap.cs" />
+    <Compile Include="BigDictionary\DictionaryMap\StandardDictionaryMap.cs" />
+    <Compile Include="BigDictionary\KeyValuePair\IKeyValuePair.cs" />
+    <Compile Include="BigDictionary\KeyValuePair\KeyValuePair.cs" />
+    <Compile Include="BigDictionary\Node\INode.cs" />
+    <Compile Include="BigDictionary\Node\Node.cs" />
+    <Compile Include="BigDictionary\Node\NodeEnumerator.cs" />
     <Compile Include="BigQueue\BigQueue.cs" />
     <Compile Include="BigStack\BigStack.cs" />
     <Compile Include="Common\Classes\Range.cs" />
